--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,15 @@
 Options -Indexes
 RewriteEngine On
 
-# Redirect requests for page.html -> /page
+# Allow Google to access sitemap.xml and robots.txt
+RewriteRule ^sitemap\.xml$ - [L]
+RewriteRule ^robots\.txt$ - [L]
+
+# Redirect page.html -> /page
 RewriteCond %{THE_REQUEST} \s/([^\s?]+)\.html [NC]
 RewriteRule ^ /%1 [R=301,L]
 
-# If a requested resource doesn't exist, but the .html exists, serve it
+# If a requested resource doesn't exist, but the .html version exists, serve it
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.html -f
